backend/check_output.txt
    Checking karuteens_backend v0.1.0 (/home/admin/KaruTeens1/backend)
error[E0382]: borrow of moved value: `all_posts`
   --> src/content.rs:362:26
    |
340 |     let mut all_posts = Vec::new();
    |         ------------- move occurs because `all_posts` has type `Vec<models::content::Post>`, which does not implement the `Copy` trait
...
350 |     let posts: Vec<Post> = all_posts.into_iter().take(limit as usize).collect();
    |                                      ----------- `all_posts` moved due to this method call
...
362 |     let next_cursor = if all_posts.len() > limit as usize {
    |                          ^^^^^^^^^ value borrowed here after move
    |
note: `into_iter` takes ownership of the receiver `self`, which moves `all_posts`
   --> library/core/src/iter/traits/collect.rs:310:17
help: you can `clone` the value and consume it, but this might not be your desired behavior
    |
350 |     let posts: Vec<Post> = all_posts.clone().into_iter().take(limit as usize).collect();
    |                                     ++++++++

error[E0308]: mismatched types
   --> src/content.rs:844:5
    |
844 |     get_trending_posts_handler(State(state), user, axum::extract::Query(query)).await
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Result<(StatusCode, Json<Value>), ...>`, found `Result<impl IntoResponse, (..., ...)>`
...
851 | ) -> Result<impl IntoResponse, (StatusCode, Json<serde_json::Value>)> {
    |             ----------------- the found opaque type
    |
    = note: expected enum `Result<(axum::http::StatusCode, axum::Json<serde_json::Value>), _>`
               found enum `Result<impl IntoResponse, _>`

error[E0382]: borrow of moved value: `all_posts`
   --> src/content.rs:906:26
    |
884 |     let mut all_posts = Vec::new();
    |         ------------- move occurs because `all_posts` has type `Vec<models::content::Post>`, which does not implement the `Copy` trait
...
894 |     let posts: Vec<Post> = all_posts.into_iter().take(limit as usize).collect();
    |                                      ----------- `all_posts` moved due to this method call
...
906 |     let next_cursor = if all_posts.len() > limit as usize {
    |                          ^^^^^^^^^ value borrowed here after move
    |
note: `into_iter` takes ownership of the receiver `self`, which moves `all_posts`
   --> library/core/src/iter/traits/collect.rs:310:17
help: you can `clone` the value and consume it, but this might not be your desired behavior
    |
894 |     let posts: Vec<Post> = all_posts.clone().into_iter().take(limit as usize).collect();
    |                                     ++++++++

error[E0277]: the trait bound `Bson: From<base::Location>` is not satisfied
    --> src/content.rs:1138:22
     |
1138 |       let update_doc = doc! {
     |  ______________________^
1139 | |         "content": payload.content,
1140 | |         "media_urls": if payload.media_urls.is_empty() { None } else { Some(payload.media_urls) },
1141 | |         "post_type": payload.post_type,
...    |
1147 | |         "author_name": author_name
1148 | |     };
     | |_____^ the trait `From<base::Location>` is not implemented for `Bson`
     |
     = help: the following other types implement trait `From<T>`:
               `Bson` implements `From<&T>`
               `Bson` implements `From<&[T]>`
               `Bson` implements `From<&mut T>`
               `Bson` implements `From<&str>`
               `Bson` implements `From<Vec<T>>`
               `Bson` implements `From<[u8; 12]>`
               `Bson` implements `From<bool>`
               `Bson` implements `From<bson::Binary>`
             and 23 others
     = note: required for `base::Location` to implement `Into<Bson>`
     = note: required for `Bson` to implement `From<std::option::Option<base::Location>>`
     = note: 1 redundant requirement hidden
     = note: required for `std::option::Option<base::Location>` to implement `Into<Bson>`
     = note: this error originates in the macro `$crate::bson` which comes from the expansion of the macro `doc` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Bson: From<models::content::Poll>` is not satisfied
    --> src/content.rs:1138:22
     |
1138 |       let update_doc = doc! {
     |  ______________________^
1139 | |         "content": payload.content,
1140 | |         "media_urls": if payload.media_urls.is_empty() { None } else { Some(payload.media_urls) },
1141 | |         "post_type": payload.post_type,
...    |
1147 | |         "author_name": author_name
1148 | |     };
     | |_____^ the trait `From<models::content::Poll>` is not implemented for `Bson`
     |
     = help: the following other types implement trait `From<T>`:
               `Bson` implements `From<&T>`
               `Bson` implements `From<&[T]>`
               `Bson` implements `From<&mut T>`
               `Bson` implements `From<&str>`
               `Bson` implements `From<Vec<T>>`
               `Bson` implements `From<[u8; 12]>`
               `Bson` implements `From<bool>`
               `Bson` implements `From<bson::Binary>`
             and 23 others
     = note: required for `models::content::Poll` to implement `Into<Bson>`
     = note: required for `Bson` to implement `From<std::option::Option<models::content::Poll>>`
     = note: 1 redundant requirement hidden
     = note: required for `std::option::Option<models::content::Poll>` to implement `Into<Bson>`
     = note: this error originates in the macro `$crate::bson` which comes from the expansion of the macro `doc` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: variable does not need to be mutable
    --> src/content.rs:1194:9
     |
1194 |     let mut draft = posts_collection.find_one(doc! { 
     |         ----^^^^^
     |         |
     |         help: remove this `mut`
     |
     = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0277, E0308, E0382.
For more information about an error, try `rustc --explain E0277`.
warning: `karuteens_backend` (lib) generated 1 warning
error: could not compile `karuteens_backend` (lib) due to 5 previous errors; 1 warning emitted
